@@ -100,10 +100,15 @@ public class TestGCALotAtAllSafepoints {
     public static void main(String[] args) throws Exception {
         ProcessBuilder pb = ProcessTools.createLimitedTestJavaProcessBuilder(args[0],
                                                                              "-Xmx16m",
+                                                                             // Even this small test can generate thousands of GCs. Reduce them.
+                                                                             "-XX:ScavengeALotInterval=13",
                                                                              "-XX:+GCALotAtAllSafepoints",
                                                                              "-XX:+ScavengeALot",
+                                                                             "-Xlog:gc,gc+start,safepoint",
                                                                              "NoSuchClass");
-        OutputAnalyzer output = new OutputAnalyzer(pb.start());
+
+        Process process = ProcessTools.startProcess("gcalot", pb);
+        OutputAnalyzer output = new OutputAnalyzer(process);
         output.shouldMatch("Error: Could not find or load main class NoSuchClass");
         output.shouldHaveExitValue(1);
     }
